--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Krisl - Custom Promotional Items with Your Logo</title>
+    <title>Krisl</title>
+    <link rel="icon" type="image/svg+xml" href="/krisl-favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/krisl-favicon.svg" />
+    <link rel="shortcut icon" href="/krisl-favicon.svg" />
+    <link rel="apple-touch-icon" href="/krisl-favicon.svg" />
     <meta name="description" content="Custom promotional products with your logo. High-quality drinkware, apparel, bags and more. Build a strong reputation with Krisl promotional items." />
-    <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="f9682602-19ac-4e60-b4ea-c37e1b9f34a1" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="author" content="Krisl" />
   </head>
+
+  
 
   <body>
     <div id="root"></div>
